2008-03-20 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: Add options context description.

2008-03-20 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/Makefile.am: Remove unused PIXDIR.

	* src/dwell-click-applet.c:
	* data/ctw.glade:
	* pixmaps/Makefile.am:

	Rename pixmaps to remove ubuntuism.

2008-03-20 Gerd Kohlberger <gerdk@svn.gnome.org>

	* configure.ac:
	* src/Makefile.am:
	* data/Makefile.am:
	
	Clean up build system.
	
	* src/mt-main.c: Remove obsolete session support.
	
	* src/dwell-click-applet.c:
	* src/pointer-capture-applet.c:
	* src/mt-ctw.c:
	* src/mt-main.c:
	
	Use new DATADIR.

2008-03-15 Gerd Kohlberger <gerdk@svn.gnome.org>

	* configure.ac:
	* README:

	Version bump for new cycle: 2.23.1

2008-03-10 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.22.1

2008-03-10 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.22.0 release.

2008-02-24 Gerd Kohlberger <gerdk@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.22.0

2008-02-24 Gerd Kohlberger <gerdk@svn.gnome.org>

	* NEWS: Prepare 2.21.92 release.

2008-02-13 Gerd Kohlberger <gerdk@svn.gnome.org>
	* configure.ac: Add bugzilla info.
	* README: Remove launchpad bug info.

2008-02-10 Gerd Kohlberger <gerdk@svn.gnome.org>
	* configure.ac:
	* README:

	Post release version bump: 2.21.92

2008-02-10 Gerd Kohlberger <gerdk@svn.gnome.org>
	* NEWS: Prepare 2.21.91 release.

2008-02-09 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/*: Update copyright.

2008-02-06 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/mt-common.h: Use proper dbus naming conventions.
	* data/DwellClick_Factory.server.in.in: Set bonobo environment. 

2008-02-06 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/dwell-click-applet.c: Add some error checking.

2008-02-05 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/mt-ctw.c: 
	* data/ctw.glade:
	
	Fix input focus handling in click-type window.
